// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons Matches snapshot for Default 1`] = `
<a
  className="hover:opacity-80 leading-tight uppercase focus:outline-none focus:ring-0 rounded transition duration-150 ease-in-out px-6 py-3.5 flex group justify-center"
  href="#"
  role="button"
>
  <span
    data-no-hydrate={true}
    id="123b58b4a9e4407d42b2606d912b6deb"
    style={
      Object {
        "display": "contents",
      }
    }
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Link",
        }
      }
    />
  </span>
</a>
`;

exports[`Buttons Matches snapshot for Primary 1`] = `
<a
  className="text-white bg-vital-primary-interactive hover:opacity-80 leading-tight uppercase focus:outline-none focus:ring-0 rounded transition duration-150 ease-in-out px-6 py-3.5 flex group justify-center"
  href="#"
  role="button"
>
  <span
    data-no-hydrate={true}
    id="123b58b4a9e4407d42b2606d912b6deb"
    style={
      Object {
        "display": "contents",
      }
    }
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Link",
        }
      }
    />
  </span>
</a>
`;

exports[`Buttons Matches snapshot for PrimarySelected 1`] = `
<a
  className="text-white bg-vital-secondary-button-selected hover:opacity-80 leading-tight uppercase focus:outline-none focus:ring-0 rounded transition duration-150 ease-in-out px-6 py-3.5 flex group justify-center"
  href="#"
  role="button"
>
  <span
    data-no-hydrate={true}
    id="123b58b4a9e4407d42b2606d912b6deb"
    style={
      Object {
        "display": "contents",
      }
    }
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Link",
        }
      }
    />
  </span>
</a>
`;

exports[`Buttons Matches snapshot for Secondary 1`] = `
<a
  className="border-vital-primary-interactive text-vital-primary-interactive hover:opacity-70 active:text-vital-primary-interactive-active border-2 hover:opacity-80 leading-tight uppercase focus:outline-none focus:ring-0 rounded transition duration-150 ease-in-out px-6 py-3.5 flex group justify-center"
  href="#"
  role="button"
>
  <span
    data-no-hydrate={true}
    id="123b58b4a9e4407d42b2606d912b6deb"
    style={
      Object {
        "display": "contents",
      }
    }
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Link",
        }
      }
    />
  </span>
</a>
`;

exports[`Buttons Matches snapshot for SecondarySelected 1`] = `
<a
  className="border-vital-secondary-button-selected text-vital-secondary-button-selected border-2 hover:opacity-80 leading-tight uppercase focus:outline-none focus:ring-0 rounded transition duration-150 ease-in-out px-6 py-3.5 flex group justify-center"
  href="#"
  role="button"
>
  <span
    data-no-hydrate={true}
    id="123b58b4a9e4407d42b2606d912b6deb"
    style={
      Object {
        "display": "contents",
      }
    }
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Link",
        }
      }
    />
  </span>
</a>
`;

exports[`Buttons Matches snapshot for WhereToBuy 1`] = `
<a
  className="rounded text-m-base lg:text-base uppercase font-bold text-vital-primary-footer-copy bg-vital-primary-interactive mx-auto p-3 w-full flex justify-center items-center max-w-64 h-12 lg:w-full"
  href="/where-to-buy"
>
  <svg
    className="w-6 h-6 mr-3 xl:mr-0 2xl:mr-3"
    height="25"
    viewBox="0 0 27.27 25"
    width="27.27"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      data-name="CART ICON"
      id="CART_ICON"
      transform="translate(1 1)"
    >
      <path
        d="M-2020.75,2766.846h4.712l3.426,15.993h14.314l2.818-11h-19.487"
        data-name="Path 5710"
        fill="none"
        id="Path_5710"
        stroke="#fff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        transform="translate(2020.75 -2766.846)"
      />
      <circle
        cx="2.404"
        cy="2.404"
        data-name="Ellipse 1822"
        fill="#fff"
        id="Ellipse_1822"
        r="2.404"
        transform="translate(8.019 19.192)"
      />
      <circle
        cx="2.404"
        cy="2.404"
        data-name="Ellipse 1823"
        fill="#fff"
        id="Ellipse_1823"
        r="2.404"
        transform="translate(17.657 19.192)"
      />
    </g>
  </svg>
  <span
    className="leading xl:hidden 2xl:block"
  >
    Where to Buy
  </span>
</a>
`;

exports[`Buttons Matches snapshot for WhereToBuyWithoutIcon 1`] = `
<a
  className="rounded text-m-base lg:text-base uppercase font-bold text-vital-primary-footer-copy bg-vital-primary-interactive mx-auto p-3 w-full flex justify-center items-center max-w-64 h-12 lg:w-full"
  href="/where-to-buy"
>
  <span
    className="leading xl:hidden 2xl:block"
  >
    Where to Buy
  </span>
</a>
`;

exports[`Buttons Matches snapshot for WithArrow 1`] = `
<a
  className="pl-12 pr-6 py-3.5 group flex-row-reverse"
>
  <span
    className="w-6 h-2 vital-arrow group-hover:text-current text-transparent pr-1 inline-block"
  />
  <span />
</a>
`;

exports[`Buttons Matches snapshot for WithBigButton 1`] = `
<a
  className="hover:opacity-80 leading-tight uppercase focus:outline-none focus:ring-0 rounded transition duration-150 ease-in-out px-12 py-6 flex group justify-center"
  href="#"
  role="button"
>
  <span
    data-no-hydrate={true}
    id="123b58b4a9e4407d42b2606d912b6deb"
    style={
      Object {
        "display": "contents",
      }
    }
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Link",
        }
      }
    />
  </span>
</a>
`;

exports[`Buttons Matches snapshot for WithDisabled 1`] = `
<button
  className="opacity-50 hover:opacity-50"
  disabled="true"
>
  <span />
</button>
`;

exports[`Buttons Matches snapshot for WithPrimary 1`] = `
<a
  className="rounded hover:bg-vital-primary-interactive transition-colors duration-400 text-m-base lg:text-base uppercase font-bold text-white bg-vital-primary-brand px-6 py-3.5 flex group justify-center"
  href="#"
  role="button"
>
  <span
    data-no-hydrate={true}
    id="123b58b4a9e4407d42b2606d912b6deb"
    style={
      Object {
        "display": "contents",
      }
    }
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Link",
        }
      }
    />
  </span>
</a>
`;
